[tool.poetry]
name = "bd_to_avp"
version = "0.2.122"
description = "Script to convert 3D Blu-ray Discs (and mts) to Apple Vision Pro (MV-HEVC) files"
authors = ["Chris Busillo <info@shinycomputers.com>"]
readme = "README.md"
homepage = "https://github.com/cbusillo/BD_to_AVP"
repository = "https://github.com/cbusillo/BD_to_AVP"
documentation = "https://github.com/cbusillo/BD_to_AVP"
keywords = ["Blu-ray", "3D", "Apple Vision Pro", "MV-HEVC", "Conversion", "Vision Pro", "BD3D"]
include = ["README.md", "pyproject.toml"]

[tool.poetry.dependencies]
python = ">=3.12.4,<3.13"
pgsrip = "^0.1.11"
setuptools = "^70.0.0"
ffmpeg-python = "^0.2.0"
tesseract = "^0.1.3"
requests = "^2.32.3"
psutil = "^5.9.8"
pyside6 = "^6.7.1"
pygithub = "^2.3.0"
humanize = "^4.9.0"
packaging = "^24.1"
babelfish = "^0.6.1"
opencv-python = "4.10.0.84"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.4.7"
ruff-lsp = "^0.0.53"
mypy = "^1.9.0"
briefcase = "=0.3.18"
types-requests = "^2.32.0.20240602"
types-psutil = "^5.9.5.20240516"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.briefcase]
project_name = "3D Blu-ray to Vision pro"
bundle = "com.shinycomputers"
architectures = ["arm64"]
version = "0.2.122"
icon = "bd_to_avp/resources/app_icon"
organization = "Shiny Computers"


[tool.briefcase.app.bd-to-avp]
formal_name = "3D Blu-ray to Vision Pro"
description = "Convert 3D Blu-ray Discs (and mts) to Apple Vision Pro (MV-HEVC) files"
categories = ["Multimedia", "Conversion"]
license.file = "LICENSE"
copyright = "Shiny Computers 2024"
sources = ["bd_to_avp", "pyproject.toml", "README.md"]
requires = [
    "pyside6",
    "ffmpeg-python",
    "pgsrip",
    "tesseract",
    "setuptools",
    "requests",
    "psutil",
    "pygithub",
    "humanize",
    "packaging",
    "babelfish",
    "opencv-python==4.10.0.84"
]


[tool.poetry.scripts]
bd-to-avp = "bd_to_avp.__main__:main"