[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "bd_to_avp"
version = "0.2.141"
description = "Script to convert 3D Blu-ray Discs (and mts) to Apple Vision Pro (MV-HEVC) files"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12.4,<3.13"
authors = [
    { name = "Chris Busillo", email = "info@shinycomputers.com" },
]
keywords = ["Blu-ray", "3D", "Apple Vision Pro", "MV-HEVC", "Conversion", "Vision Pro", "BD3D"]
dependencies = [
    "babelfish>=0.6.1,<0.7",
    "ffmpeg-python>=0.2.0,<0.3",
    "humanize>=4.9.0,<5",
    "opencv-python==4.10.0.84",
    "packaging>=24.1,<27",
    "pgsrip==0.1.11",
    "psutil>=5.9.8,<8",
    "pygithub>=2.3.0,<3",
    "pyside6>=6.7.1,<7",
    "requests>=2.32.3,<3",
    "setuptools>=70.3.0,<71",
    "wakepy>=0.9.1,<1.1",
]

[project.urls]
Homepage = "https://github.com/cbusillo/BD_to_AVP"
Repository = "https://github.com/cbusillo/BD_to_AVP"
Documentation = "https://github.com/cbusillo/BD_to_AVP"

[project.scripts]
bd-to-avp = "bd_to_avp.__main__:main"

[dependency-groups]
dev = [
    "black>=26.5.1,<27",
    "briefcase>=0.4.3,<0.5",
    "mypy>=2.1.0,<3",
    "ruff>=0.15.20,<0.16",
    "types-psutil>=5.9.5.20240516",
    "types-requests>=2.32.0.20240602",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.wheel]
packages = ["bd_to_avp"]
artifacts = [
    "bd_to_avp/bin/**",
    "bd_to_avp/resources/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "bd_to_avp",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.briefcase]
project_name = "3D Blu-ray to Vision pro"
bundle = "com.shinycomputers"
architectures = ["arm64"]
version = "0.2.141"
icon = "bd_to_avp/resources/app_icon"
organization = "Shiny Computers"

[tool.briefcase.app.bd-to-avp]
formal_name = "3D Blu-ray to Vision Pro"
description = "Convert 3D Blu-ray Discs (and mts) to Apple Vision Pro (MV-HEVC) files"
categories = ["Multimedia", "Conversion"]
copyright = "Shiny Computers 2024"
sources = ["bd_to_avp", "pyproject.toml", "README.md"]
requires = [
    "babelfish>=0.6.1,<0.7",
    "ffmpeg-python>=0.2.0,<0.3",
    "humanize>=4.9.0,<5",
    "opencv-python==4.10.0.84",
    "packaging>=24.1,<27",
    "pgsrip==0.1.11",
    "psutil>=5.9.8,<8",
    "pygithub>=2.3.0,<3",
    "pyside6>=6.7.1,<7",
    "requests>=2.32.3,<3",
    "setuptools>=70.3.0,<71",
    "wakepy>=0.9.1,<1.1",
]

[tool.briefcase.app.bd-to-avp.macOS]
universal_build = false

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "RUF"]

[tool.mypy]
python_version = "3.12"
