[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "bd_to_avp"
version = "0.3.0b3"
description = "Script to convert 3D Blu-ray Discs (and mts) to Apple Vision Pro (MV-HEVC) files"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12.4,<3.13"
authors = [
    { name = "Chris Busillo", email = "info@shinycomputers.com" },
]
keywords = ["Blu-ray", "3D", "Apple Vision Pro", "MV-HEVC", "Conversion", "Vision Pro", "BD3D"]
dependencies = [
    "babelfish>=0.6.1,<0.7",
    "cleanit>=0.4.8,<0.5",
    "click>=8.1.3,<9",
    "ffmpeg-python>=0.2.0,<0.3",
    "humanize>=4.9.0,<5",
    "numpy>=2,<3",
    "opencv-python==5.0.0.93",
    "psutil>=5.9.8,<8",
    "pyobjc-framework-vision>=11.0,<13",
    "pysrt>=1.1.2,<2",
    "trakit>=0.2.2,<0.3",
    "wakepy>=0.9.1,<1.1",
]

[project.optional-dependencies]
gui = [
    # PySide6 6.10+ includes macOS binaries that require macOS 15.
    "pyside6>=6.7.1,<6.10",
]

[project.urls]
Homepage = "https://github.com/cbusillo/BD_to_AVP"
Repository = "https://github.com/cbusillo/BD_to_AVP"
Documentation = "https://github.com/cbusillo/BD_to_AVP"

[project.scripts]
bd-to-avp = "bd_to_avp.__main__:main"
bd-to-avp-worker = "bd_to_avp.worker.__main__:main"

[dependency-groups]
dev = [
    "black>=26.5.1,<27",
    "briefcase==0.4.4",
    "mypy>=2.1.0,<3",
    "pyside6>=6.7.1,<6.10",
    "ruff>=0.15.20,<0.16",
    "types-psutil>=5.9.5.20240516",
]

[tool.uv]
required-version = "==0.11.29"
default-groups = "all"

[tool.hatch.build.targets.wheel]
packages = ["bd_to_avp"]
artifacts = [
    "bd_to_avp/bin/**",
    "bd_to_avp/resources/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "bd_to_avp",
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "scripts/build_edge264_macos.py",
    "scripts/generate_language_catalog.py",
]

[tool.briefcase]
project_name = "3D Blu-ray to Vision Pro"
bundle = "com.shinycomputers"
architectures = ["arm64"]
icon = "bd_to_avp/resources/app_icon"
organization = "Shiny Computers"

[tool.briefcase.app.bd-to-avp]
formal_name = "3D Blu-ray to Vision Pro"
description = "Convert 3D Blu-ray Discs (and mts) to Apple Vision Pro (MV-HEVC) files"
categories = ["Multimedia", "Conversion"]
copyright = "Shiny Computers 2024"
sources = ["bd_to_avp", "pyproject.toml", "README.md"]
requires = [
    "babelfish>=0.6.1,<0.7",
    "cleanit>=0.4.8,<0.5",
    "click>=8.1.3,<9",
    "ffmpeg-python>=0.2.0,<0.3",
    "humanize>=4.9.0,<5",
    "numpy>=2,<3",
    "opencv-python==5.0.0.93",
    "psutil>=5.9.8,<8",
    "pyobjc-framework-vision>=11.0,<13",
    # PySide6 6.10+ includes macOS binaries that require macOS 15.
    "pyside6>=6.7.1,<6.10",
    "pysrt>=1.1.2,<2",
    "trakit>=0.2.2,<0.3",
    "wakepy>=0.9.1,<1.1",
]

[tool.briefcase.app.bd-to-avp.macOS]
universal_build = false
min_os_version = "14.0"

[tool.briefcase.app.bd-to-avp.macOS.info]
CFBundleVersion = "148"
BDToAVPDistributionChannel = "direct"
SUFeedURL = "https://cbusillo.github.io/BD_to_AVP/appcast.xml"
SUPublicEDKey = "nJv1BH0mc2KFORVIDLlSI2A9mvGpVWdLcxlmz++OODU="
SUAllowsAutomaticUpdates = false
SUVerifyUpdateBeforeExtraction = true

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["bd_to_avp/vendor/pgsrip"]

[tool.ruff.lint]
select = ["E", "F", "B", "RUF"]

[tool.mypy]
python_version = "3.12"
